lists, nav, grid modules

--- a/app/_layouts/default.html
+++ b/app/_layouts/default.html
@@ -62,8 +62,9 @@ Now have fun looking around. :)
 
 	<footer class="row">
 		<div class="cell">
+
 			<div class="grid">
-				<div class="grid-box grid-box--desk--1of2">
+				<div class="grid-box grid-box--l--1of2">
 					<div class="grid">
 						<div class="grid-box grid-box--1of3">
 							<img class="ra" src="/img/avatar.jpg" alt="The always charming John D. Jameson">
@@ -75,7 +76,7 @@ Now have fun looking around. :)
 					</div>
 				</div>
 
-				<div class="grid-box grid-box--desk--1of2">
+				<div class="grid-box grid-box--l--1of2">
 					<ul class="list--unstyled">
 						<li><a href="https://twitter.com/johndjameson">Twitter</a></li>
 						<li><a href="http://dribbble.com/johndjameson">Dribbble</a></li>
@@ -86,10 +87,10 @@ Now have fun looking around. :)
 				</div>
 
 			</div>
+
+			<p class="tac tcs">&ldquo;You're ready. Start making stuff.&rdquo; &mdash;&nbsp;Austin&nbsp;Kleon</p>
+
 		</div>
-
-		<p>&ldquo;You're ready. Start making stuff.&rdquo; &mdash;&nbsp;Austin&nbsp;Kleon</p>
-
 	</footer>
 
 	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
