--- a/app/_sass/structures/_list.sass
+++ b/app/_sass/structures/_list.sass
@@ -12,6 +12,12 @@
 //   Modifiers
 // -------------------------------------
 
+.list--inline
+  padding: 0
+  > li
+    @extend .dib
+    @extend .mrs
+
 .list--unstyled
   list-style: none
   margin: 0
