--- a/app/_sass/application.sass
+++ b/app/_sass/application.sass
@@ -34,6 +34,7 @@
 @import "structures/highlight-colors"
 @import "structures/list"
 @import "structures/logo"
+@import "structures/nav"
 @import "structures/post"
 @import "structures/well"
 
