--- a/app/_sass/foundation/_settings.sass
+++ b/app/_sass/foundation/_settings.sass
@@ -27,13 +27,28 @@ $b-boxShadow: 0 1px 2px rgba(#222, 0.25)
 $b-fontSize: 16px
 $b-fontSize-bp: 22px
 
+$b-fontSize-s: 14px
+$b-fontSize-m: 16px
+$b-fontSize-l: 21px
+$b-fontSize-xl: 28px
+$b-fontSize-xxl: 37px
+$b-fontSize-xxxl: 49px
+$b-fontSize-xxxxl: 87px
+
+$bp-text-size: 45em
+
 $b-lineHeight: 1.5
 $b-maxWidth: 61.25em
-$b-whitespace: 1.25em
+
+$b-whitespace: 1.25rem
+$b-whitespace-xs: $b-whitespace * 0.5
+$b-whitespace-s: $b-whitespace * 0.5
+$b-whitespace-l: $b-whitespace * 2
 
 // ----- Base ----- //
 
 $bp-layout: 600px
+$bp-fontSize: 600px
 $bp-sidenotes: 800px
 
 // ----- Colors ----- //
@@ -43,7 +58,7 @@ $c-base: #222
 $c-header: #333
 $c-highlight: #975997
 $c-invert: #fff
-$c-subdue: #ccc
+$c-subdue: #999
 
 $c-primary: #975997
 
