--- a/app/_sass/application.sass
+++ b/app/_sass/application.sass
@@ -36,6 +36,7 @@
 @import "structures/logo"
 @import "structures/nav"
 @import "structures/post"
+@import "structures/recentPosts"
 @import "structures/well"
 
 // -------------------------------------
