--- a/app/_sass/components/_grid.sass
+++ b/app/_sass/components/_grid.sass
@@ -12,7 +12,7 @@
 // -------------------------------------
 
 $grid-columns: 4 !default
-$grid-defaults: "m" 480px, "l" 800px !default
+$grid-defaults: "m" $bp-grid-m, "l" $bp-grid-l !default
 $grid-gutter: $b-whitespace !default
 $grid-silent: false !default
 
