--- a/app/_sass/foundation/_settings.sass
+++ b/app/_sass/foundation/_settings.sass
@@ -9,7 +9,7 @@
 //   @font-face
 // -------------------------------------
 
-// ...
+// Nah, use that Typekit, b.
 
 // -------------------------------------
 //   Variables
@@ -17,28 +17,26 @@
 
 // ----- Base ----- //
 
-$b-borderColor: rgba(#975997, 0.25)
+$b-borderColor: #d8d8d8
 $b-borderStyle: solid
-$b-borderWidth: 2px
+$b-borderWidth: 3px
 $b-border: $b-borderWidth $b-borderStyle $b-borderColor
-$b-borderRadius: 3px
-$b-boxShadow: 0 1px 2px rgba(#222, 0.25)
+$b-borderRadius: 5px
+$b-boxShadow: 0 2px 0 rgba(#222, 0.25)
 
 $b-fontSize: 16px
-$b-fontSize-bp: 22px
+$b-fontSize-bp: 21px
 
 $b-fontSize-s: 14px
-$b-fontSize-m: 16px
-$b-fontSize-l: 21px
-$b-fontSize-xl: 28px
-$b-fontSize-xxl: 37px
-$b-fontSize-xxxl: 49px
-$b-fontSize-xxxxl: 87px
-
-$bp-text-size: 45em
+$b-fontSize-m: $b-fontSize
+$b-fontSize-l: $b-fontSize-bp
+$b-fontSize-xl: 25px
+$b-fontSize-xxl: 33px
+$b-fontSize-xxxl: 38px
+$b-fontSize-xxxxl: 50px
 
 $b-lineHeight: 1.5
-$b-maxWidth: 61.25em
+$b-maxWidth: 50em
 
 $b-whitespace: 1.25rem
 $b-whitespace-xs: $b-whitespace * 0.5
@@ -47,8 +45,10 @@ $b-whitespace-l: $b-whitespace * 2
 
 // ----- Base ----- //
 
+$bp-grid-m: 660px
+$bp-grid-l: 900px
 $bp-layout: 600px
-$bp-fontSize: 600px
+$bp-fontSize: 800px
 $bp-sidenotes: 800px
 
 // ----- Colors ----- //
