--- a/app/_sass/application.sass
+++ b/app/_sass/application.sass
@@ -30,6 +30,7 @@
 // -------------------------------------
 
 @import "structures/ampersand"
+@import "structures/button"
 @import "structures/highlight"
 @import "structures/highlight-colors"
 @import "structures/list"
