--- a/app/_sass/foundation/_settings.sass
+++ b/app/_sass/foundation/_settings.sass
@@ -25,7 +25,7 @@ $b-borderRadius: 5px
 $b-boxShadow: 0 2px 0 rgba(#222, 0.25)
 
 $b-fontSize: 16px
-$b-fontSize-bp: 21px
+$b-fontSize-bp: 22px
 
 $b-fontSize-s: 14px
 $b-fontSize-m: $b-fontSize
@@ -36,9 +36,10 @@ $b-fontSize-xxxl: 38px
 $b-fontSize-xxxxl: 50px
 
 $b-lineHeight: 1.5
-$b-maxWidth: 50em
+$b-maxWidth: 60rem //
+$b-transition: 0.2s ease-in-out
 
-$b-whitespace: 1.25rem
+$b-whitespace: 1.25rem // 20px
 $b-whitespace-xs: $b-whitespace * 0.5
 $b-whitespace-s: $b-whitespace * 0.5
 $b-whitespace-l: $b-whitespace * 2
@@ -48,7 +49,7 @@ $b-whitespace-l: $b-whitespace * 2
 $bp-grid-m: 660px
 $bp-grid-l: 900px
 $bp-layout: 600px
-$bp-fontSize: 800px
+$bp-fontSize: 600px
 $bp-sidenotes: 800px
 
 // ----- Colors ----- //
