--- a/app/_sass/foundation/_utilities.sass
+++ b/app/_sass/foundation/_utilities.sass
@@ -223,6 +223,7 @@
 // ----- Weight ----- //
 
 .twn
-  font-weight: normal
+  font-weight: 400
 .twb
-  font-weight: bold
+  // Tisa picks the only bold, Source Sans uses semibold
+  font-weight: 600
