--- a/app/_sass/foundation/_settings.sass
+++ b/app/_sass/foundation/_settings.sass
@@ -43,13 +43,14 @@ $b-whitespace: 1.25rem // 20px
 $b-whitespace-xs: $b-whitespace * 0.5
 $b-whitespace-s: $b-whitespace * 0.5
 $b-whitespace-l: $b-whitespace * 2
+$b-whitespace-xl: $b-whitespace * 3
 
 // ----- Base ----- //
 
-$bp-grid-m: 660px
+$bp-grid-m: 600px
 $bp-grid-l: 900px
 $bp-layout: 600px
-$bp-fontSize: 600px
+$bp-fontSize: 700px
 $bp-sidenotes: 800px
 
 // ----- Colors ----- //
