--- a/app/_layouts/post.html
+++ b/app/_layouts/post.html
@@ -3,19 +3,22 @@ layout: default
 ---
 
 <main class="row">
-
     <div class="cell">
 
-        <article class="post">
+        <div class="grid">
+        <div class="grid-box grid-box--center grid-box--m--5of6 grid-box--l--3of4">
+                <article class="post">
 
-            <header class="post-header">
-                <h1 class="post-title">{{page.title-display}}</h1>
-                <time class="post-date" datetime="{{ page.date | date: '%Y-%m-%d'}}">{{ page.date | date: "%B %d, %Y" }}</time>
-            </header>
+                    <header class="post-header">
+                        <h1 class="post-title">{{page.title-display}}</h1>
+                        <time class="post-date" datetime="{{ page.date | date: '%Y-%m-%d'}}">{{ page.date | date: "%B %d, %Y" }}</time>
+                    </header>
 
-            {{content}}
+                    {{content}}
 
-        </article>
+                </article>
+            </div>
+        </div>
 
     </div>
 </main>
