--- a/app/_sass/structures/_button.sass
+++ b/app/_sass/structures/_button.sass
@@ -25,7 +25,7 @@ $button-borderWidth: 1px
   line-height: 1.25
   padding: $b-whitespace-s $b-whitespace
   text-shadow: 0 -1px 0 $button-borderColor
-  transition: 0.05s steps(2, start)
+  // transition: 0.05s steps(2, start)
   &::before, &::after
     @extend .poa
     @extend .ram
