--- a/app/_layouts/default.html
+++ b/app/_layouts/default.html
@@ -31,26 +31,30 @@ Now have fun looking around. :)
 </head>
 <body>
 
-	<header class="row mbl" role="banner">
-		<div class="cell">
-			<div class="logo fl">
-				<a class="logo-link" href="/">
-					<img class="logo-image" src="/img/johndjameson-logo.svg" alt="JJ logo">
-				</a>
+	<header class="header" role="banner">
+		<div class="header-content">
+			<div class="header-masthead">
+				<div class="logo">
+					<a class="logo-link" href="/">
+						<img class="logo-image" src="/img/johndjameson-logo.svg" alt="JJ logo">
+					</a>
 
-				<span><em>He&rsquo;s got character.</em></span>
+					<span class="logo-tagline"><em>He&rsquo;s got character.</em></span>
+				</div>
 			</div>
 
-			<nav class="nav fr" role="navigation">
-				<ul class="nav-list">
-					<li class="nav-item">
-						<a class="nav-link" href="/">Home</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="/blog/">Blog</a>
-					</li>
-				</ul>
-			</nav>
+			<div class="header-navigation">
+				<nav class="nav" role="navigation">
+					<ul class="nav-list">
+						<li class="nav-item">
+							<a class="nav-link" href="/">Home</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="/blog/">Blog</a>
+						</li>
+					</ul>
+				</nav>
+			</div>
 		</div>
 	</header>
 
