--- a/app/_sass/application.sass
+++ b/app/_sass/application.sass
@@ -31,6 +31,7 @@
 
 @import "structures/ampersand"
 @import "structures/button"
+@import "structures/header"
 @import "structures/highlight"
 @import "structures/highlight-colors"
 @import "structures/list"
