--- a/app/_sass/structures/_nav.sass
+++ b/app/_sass/structures/_nav.sass
@@ -33,10 +33,12 @@
 
 .nav-list
   @extend .list--inline
+  @extend .mbf
 
 // ----- Nav Item ----- //
 
 .nav-item
+  @extend .mbf
   &:not(:first-of-type)
     &::before
       content: "\2022" // utf bullet •
