Dribbble gallery grid / hover

--- a/app/_layouts/default.html
+++ b/app/_layouts/default.html
@@ -35,7 +35,7 @@ Now have fun looking around. :)
 		<div class="header-content">
 			<div class="header-masthead">
 				<div class="logo">
-					<a class="logo-link" href="/">
+					<a class="unstyledLink" href="/">
 						<img class="logo-image" src="/img/johndjameson-logo.svg" alt="JJ logo">
 					</a>
 
@@ -88,7 +88,7 @@ Now have fun looking around. :)
 
 			</div>
 
-			<p class="tac tcs">&ldquo;You're ready. Start making stuff.&rdquo; &mdash;&nbsp;Austin&nbsp;Kleon</p>
+			<p class="tac tcs tss">&ldquo;You're ready. Start making stuff.&rdquo; &mdash;&nbsp;Austin&nbsp;Kleon</p>
 
 		</div>
 	</footer>
