--- a/app/_sass/application.sass
+++ b/app/_sass/application.sass
@@ -29,16 +29,20 @@
 //   Structures
 // -------------------------------------
 
+@import "structures/unstyledLink"
+@import "structures/list"
+
+
 @import "structures/ampersand"
 @import "structures/button"
 @import "structures/header"
 @import "structures/highlight"
 @import "structures/highlight-colors"
-@import "structures/list"
 @import "structures/logo"
 @import "structures/nav"
 @import "structures/post"
 @import "structures/recentPosts"
+@import "structures/thumbnail"
 @import "structures/well"
 
 // -------------------------------------
