Hero unit modularized, label

--- a/app/_layouts/default.html
+++ b/app/_layouts/default.html
@@ -63,29 +63,30 @@ Now have fun looking around. :)
 	<footer class="row">
 		<div class="cell">
 
-			<div class="grid">
-				<div class="grid-box grid-box--l--1of2">
-					<div class="grid">
-						<div class="grid-box grid-box--1of3">
-							<img class="ra" src="/img/avatar.jpg" alt="The always charming John D. Jameson">
-						</div>
-						<div class="grid-box grid-box--2of3">
-							<p>John D. Jameson</p>
-							<p>Web designer and front&#x2011;end developer in Orlando,&nbsp;Florida.</p>
+			<div class="footer-content">
+				<div class="grid mbm">
+					<div class="grid-box grid-box--l--1of2">
+						<div class="grid">
+							<div class="grid-box grid-box--1of3">
+								<img class="ra" src="/img/avatar.jpg" alt="The always charming John D. Jameson">
+							</div>
+							<div class="grid-box grid-box--2of3">
+								<p class="mbs tfh twb">John D. Jameson</p>
+								<p>Web designer and front&#x2011;end developer in Orlando,&nbsp;Florida.</p>
+							</div>
 						</div>
 					</div>
-				</div>
 
-				<div class="grid-box grid-box--l--1of2">
-					<ul class="list--unstyled">
-						<li><a href="https://twitter.com/johndjameson">Twitter</a></li>
-						<li><a href="http://dribbble.com/johndjameson">Dribbble</a></li>
-						<li><a href="http://codepen.io/johndjameson/">CodePen</a></li>
-						<li><a href="https://github.com/johndjameson">GitHub</a></li>
-						<li><a href="http://feeds.feedburner.com/johndjameson"><abbr>RSS</abbr></a></li>
-					</ul>
-				</div>
+					<div class="grid-box grid-box--l--1of2">
+						<ul class="list--unstyled">
+							<li><a href="https://twitter.com/johndjameson">Twitter</a></li>
+							<li><a href="http://dribbble.com/johndjameson">Dribbble</a></li>
+							<li><a href="https://github.com/johndjameson">GitHub</a></li>
+							<li><a href="http://feeds.feedburner.com/johndjameson"><abbr>RSS</abbr></a></li>
+						</ul>
+					</div>
 
+				</div>
 			</div>
 
 			<p class="tac tcs tss">&ldquo;You're ready. Start making stuff.&rdquo; &mdash;&nbsp;Austin&nbsp;Kleon</p>
