--- a/app/_sass/application.sass
+++ b/app/_sass/application.sass
@@ -31,11 +31,13 @@
 
 @import "structures/unstyledLink"
 @import "structures/list"
-
+@import "structures/label"
 
 @import "structures/ampersand"
 @import "structures/button"
+@import "structures/footer"
 @import "structures/header"
+@import "structures/hero"
 @import "structures/highlight"
 @import "structures/highlight-colors"
 @import "structures/logo"
