--- a/app/_sass/structures/_recentPosts.sass
+++ b/app/_sass/structures/_recentPosts.sass
@@ -47,10 +47,7 @@
   @extend .fr
   @extend .mbf
   @extend .tar
-  @extend .tcs
-  @extend .tss
-  @extend .ttu
-  @extend .twb
+  @extend .label
   padding-left: $b-whitespace-s
   width: percentage(2/5)
 
