updated post/sidenote styles

--- a/app/_sass/foundation/_settings.sass
+++ b/app/_sass/foundation/_settings.sass
@@ -51,7 +51,7 @@ $bp-grid-m: 600px
 $bp-grid-l: 900px
 $bp-layout: 600px
 $bp-fontSize: 700px
-$bp-sidenotes: 800px
+$bp-sidenotes: $bp-grid-l + 200px
 
 // ----- Colors ----- //
 
