--- a/app/_sass/structures/_highlight.sass
+++ b/app/_sass/structures/_highlight.sass
@@ -6,9 +6,9 @@
 // *************************************
 
 .highlight
-  @extend %well
+  @extend .tss
+  @extend .well
   background-color: #f4f4f4
-  font-size: em(14px)
   overflow: auto
   code
     white-space: pre
