--- a/app/_sass/structures/_well.sass
+++ b/app/_sass/structures/_well.sass
@@ -5,11 +5,11 @@
 //
 // *************************************
 
-.well, %well
+.well
+  @extend .mbm
   background-color: #f4f4f4
   border: 1px solid $b-borderColor
   border-radius: $b-borderRadius
-  margin: 0 0 $b-whitespace 0
   padding: $b-whitespace
 
 // -------------------------------------
