--- a/app/_layouts/default.html
+++ b/app/_layouts/default.html
@@ -81,6 +81,7 @@ Now have fun looking around. :)
 						<ul class="list--unstyled">
 							<li><a href="https://twitter.com/johndjameson">Twitter</a></li>
 							<li><a href="http://dribbble.com/johndjameson">Dribbble</a></li>
+							<li><a href="http://dribbble.com/johndjameson">CodePen</a></li>
 							<li><a href="https://github.com/johndjameson">GitHub</a></li>
 							<li><a href="http://feeds.feedburner.com/johndjameson"><abbr>RSS</abbr></a></li>
 						</ul>
