--- a/app/_sass/foundation/_utilities.sass
+++ b/app/_sass/foundation/_utilities.sass
@@ -71,13 +71,13 @@
 .mbf
   margin-bottom: 0
 .mbxs
-  margin-bottom: 0.25 * $b-whitespace
+  margin-bottom: $b-whitespace-xs
 .mbs
-  margin-bottom: 0.5 * $b-whitespace
+  margin-bottom: $b-whitespace-s
 .mbm
   margin-bottom: $b-whitespace
 .mbl
-  margin-bottom: 2 * $b-whitespace
+  margin-bottom: $b-whitespace-l
 
 // ----- Horizontal ----- //
 
@@ -90,7 +90,7 @@
 .mlf
   margin-left: 0
 .mls
-  margin-left: 0.5 * $b-whitespace
+  margin-left: $b-whitespace-s
 .mlm
   margin-left: $b-whitespace
 
@@ -99,7 +99,7 @@
 .mrf
   margin-right: 0
 .mrs
-  margin-right: 0.5 * $b-whitespace
+  margin-right: $b-whitespace-s
 .mrm
   margin-right: $b-whitespace
 
@@ -108,9 +108,13 @@
 .mtf
   margin-top: 0
 .mts
-  margin-top: 0.5 * $b-whitespace
+  margin-top: $b-whitespace-s
 .mtm
   margin-top: $b-whitespace
+.mtl
+  margin-top: $b-whitespace-l
+.mtxl
+  margin-top: $b-whitespace-xl
 
 // -------------------------------------
 //   Positioning
@@ -218,6 +222,10 @@
 
 .ttu
   letter-spacing: 0.05em
+  text-transform: uppercase
+
+.ttuw
+  letter-spacing: 0.2em
   text-transform: uppercase
 
 // ----- Weight ----- //
