abbr, footer width

--- a/app/_layouts/default.html
+++ b/app/_layouts/default.html
@@ -65,28 +65,33 @@ Now have fun looking around. :)
 
 			<div class="footer-content">
 				<div class="grid mbm">
-					<div class="grid-box grid-box--l--1of2">
-						<div class="grid">
-							<div class="grid-box grid-box--1of3">
-								<img class="ra" src="/img/avatar.jpg" alt="The always charming John D. Jameson">
+					<div class="grid">
+						<div class="grid-box grid-box--center grid-box--m--4of5 grid-box--l--3of4">
+							<div class="grid-box grid-box--m--1of2">
+								<div class="grid">
+									<div class="grid-box grid-box--1of3">
+										<img class="ra mbm" src="/img/avatar.jpg" alt="The always charming John D. Jameson">
+									</div>
+									<div class="grid-box grid-box--2of3">
+										<h4 class="mbf tfh tsm twb">John D. Jameson</h4>
+										<p class="tss">Web designer and front&#x2011;end developer in Orlando,&nbsp;Florida.</p>
+									</div>
+								</div>
 							</div>
-							<div class="grid-box grid-box--2of3">
-								<p class="mbs tfh twb">John D. Jameson</p>
-								<p>Web designer and front&#x2011;end developer in Orlando,&nbsp;Florida.</p>
+
+							<div class="grid-box grid-box--m--1of2">
+								<nav class="nav">
+									<ul class="list--unstyled list--inline tss">
+										<li><a href="https://twitter.com/johndjameson">Twitter</a></li>
+										<li><a href="http://dribbble.com/johndjameson">Dribbble</a></li>
+										<li><a href="http://dribbble.com/johndjameson">CodePen</a></li>
+										<li><a href="https://github.com/johndjameson">GitHub</a></li>
+										<li><a href="http://feeds.feedburner.com/johndjameson"><abbr>RSS</abbr></a></li>
+									</ul>
+								</nav>
 							</div>
 						</div>
 					</div>
-
-					<div class="grid-box grid-box--l--1of2">
-						<ul class="list--unstyled">
-							<li><a href="https://twitter.com/johndjameson">Twitter</a></li>
-							<li><a href="http://dribbble.com/johndjameson">Dribbble</a></li>
-							<li><a href="http://dribbble.com/johndjameson">CodePen</a></li>
-							<li><a href="https://github.com/johndjameson">GitHub</a></li>
-							<li><a href="http://feeds.feedburner.com/johndjameson"><abbr>RSS</abbr></a></li>
-						</ul>
-					</div>
-
 				</div>
 			</div>
 
