--- a/app/_sass/foundation/_base.sass
+++ b/app/_sass/foundation/_base.sass
@@ -33,7 +33,8 @@ li
 
 h1, .h1,
 h2, .h2,
-h3, .h3
+h3, .h3,
+h4, .h4
   @extend .mbm
   @extend .mtf
   @extend .tfh
@@ -66,3 +67,7 @@ a
   &:hover,
   &:focus
     color: mix($c-highlight, $c-base)
+
+abbr
+  @extend .ttu
+  font-size: 95%
