--- a/app/_sass/structures/_list.sass
+++ b/app/_sass/structures/_list.sass
@@ -23,6 +23,11 @@
   margin: 0
   padding: 0
 
+.list--flat
+  li
+    @extend .mbf
+
+
 // -------------------------------------
 //   States
 // -------------------------------------
