Safari button flicker, post datetime

--- a/app/_sass/foundation/_base.sass
+++ b/app/_sass/foundation/_base.sass
@@ -13,6 +13,7 @@ html
   @extend .tcb
   background: $c-background
   line-height: $b-lineHeight
+  text-rendering: optimizeLegibility
 
 body
   @extend .tsb
