--- a/app/_layouts/default.html
+++ b/app/_layouts/default.html
@@ -103,7 +103,7 @@ Now have fun looking around. :)
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 
 	{% if page.dribbble %}
-	<script src="/js/dribbble.js"></script>
+	<script src="/js/dribbble.js" async></script>
 	{% endif %}
 
 	{% if page.post %}
