--- a/app/_sass/structures/_hero.sass
+++ b/app/_sass/structures/_hero.sass
@@ -31,7 +31,7 @@
 
 .hero-title
   @extend .mbs
-  @extend .tsxl
+  @extend .tsxxl
   +respond-to($bp-grid-m)
     padding-top: $b-whitespace
   +respond-to($bp-fontSize)
