permalinks, footer, hero copy

--- a/app/_layouts/default.html
+++ b/app/_layouts/default.html
@@ -64,9 +64,9 @@ Now have fun looking around. :)
 		<div class="cell">
 
 			<div class="footer-content">
-				<div class="grid mbm">
-					<div class="grid">
-						<div class="grid-box grid-box--center grid-box--m--4of5 grid-box--l--3of4">
+				<div class="grid">
+					<div class="grid-box grid-box--center grid-box--m--4of5 grid-box--l--3of4">
+						<div class="grid">
 							<div class="grid-box grid-box--m--1of2">
 								<div class="grid">
 									<div class="grid-box grid-box--1of3">
@@ -80,15 +80,13 @@ Now have fun looking around. :)
 							</div>
 
 							<div class="grid-box grid-box--m--1of2">
-								<nav class="nav">
-									<ul class="list--unstyled list--inline tss">
-										<li><a href="https://twitter.com/johndjameson">Twitter</a></li>
-										<li><a href="http://dribbble.com/johndjameson">Dribbble</a></li>
-										<li><a href="http://dribbble.com/johndjameson">CodePen</a></li>
-										<li><a href="https://github.com/johndjameson">GitHub</a></li>
-										<li><a href="http://feeds.feedburner.com/johndjameson"><abbr>RSS</abbr></a></li>
-									</ul>
-								</nav>
+								<ul class="footer-list">
+									<li><a href="https://twitter.com/johndjameson">Twitter</a></li>
+									<li><a href="http://dribbble.com/johndjameson">Dribbble</a></li>
+									<li><a href="http://dribbble.com/johndjameson">CodePen</a></li>
+									<li><a href="https://github.com/johndjameson">GitHub</a></li>
+									<li><a href="http://feeds.feedburner.com/johndjameson"><abbr>RSS</abbr></a></li>
+								</ul>
 							</div>
 						</div>
 					</div>
