--- a/app/_sass/structures/_footer.sass
+++ b/app/_sass/structures/_footer.sass
@@ -30,8 +30,23 @@
 // -------------------------------------
 
 .footer-content
-  @extend .mbm
   border-bottom: $b-border
   border-top: $b-border
+  margin-bottom: $b-whitespace
   padding-top: $b-whitespace-l
+  +respond-to($bp-grid-m)
+    padding-bottom: $b-whitespace
+
+.footer-list
+  @extend .tss
+  @extend .list--unstyled
+  @extend .list--flat
+  +respond-to($bp-grid-m, 'max-width')
+    border-top: $b-border
+    > li
+      padding-bottom: $b-whitespace-s
+      padding-top: $b-whitespace-s
+      text-align: center
+      &:not(:last-of-type)
+        border-bottom: $b-border
 
