--- a/app/_layouts/default.html
+++ b/app/_layouts/default.html
@@ -81,10 +81,10 @@ Now have fun looking around. :)
 
 							<div class="grid-box grid-box--m--1of2">
 								<ul class="footer-list">
-									<li><a href="https://twitter.com/johndjameson">Twitter</a></li>
-									<li><a href="http://dribbble.com/johndjameson">Dribbble</a></li>
-									<li><a href="http://dribbble.com/johndjameson">CodePen</a></li>
-									<li><a href="https://github.com/johndjameson">GitHub</a></li>
+									<li class="list-item"><a href="https://twitter.com/johndjameson">Twitter</a></li>
+									<li class="list-item"><a href="https://dribbble.com/johndjameson">Dribbble</a></li>
+									<li class="list-item"><a href="http://codepen.io/johndjameson/">CodePen</a></li>
+									<li class="list-item"><a href="https://github.com/johndjameson">GitHub</a></li>
 									<li><a href="http://feeds.feedburner.com/johndjameson"><abbr>RSS</abbr></a></li>
 								</ul>
 							</div>
