--- a/app/_sass/application.sass
+++ b/app/_sass/application.sass
@@ -40,6 +40,7 @@
 @import "structures/hero"
 @import "structures/highlight"
 @import "structures/highlight-colors"
+@import "structures/icon"
 @import "structures/logo"
 @import "structures/nav"
 @import "structures/post"
