--- a/app/_sass/foundation/_utilities.sass
+++ b/app/_sass/foundation/_utilities.sass
@@ -36,6 +36,18 @@
     width: 0
     height: 150%
 
+// ----- Visually Hidden ----- //
+
+.vh
+  border: 0
+  clip: rect(0 0 0 0)
+  height: 1px
+  margin: -1px
+  overflow: hidden
+  padding: 0
+  position: absolute
+  width: 1px
+
 // -------------------------------------
 //   Background
 // -------------------------------------
