Typekit font names, small caps, post header, code

--- a/app/_sass/foundation/_base.sass
+++ b/app/_sass/foundation/_base.sass
@@ -72,3 +72,13 @@ a
 abbr
   @extend .ttu
   font-size: 95%
+
+b
+  font-weight: inherit
+
+code
+  &:not([class])
+    background-color: #f4f4f4
+    padding-left: 2px
+    padding-right: 2px
+    font-size: 80%
