--- a/app/_sass/foundation/_settings.sass
+++ b/app/_sass/foundation/_settings.sass
@@ -66,6 +66,6 @@ $c-primary: #975997
 
 // ----- Fonts ----- //
 
-$f-base: 'Source Sans Pro', 'Open Sans', 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif
-$f-header: 'Tisa Pro', 'Georgia', serif
+$f-base: 'source-sans-pro', 'Open Sans', 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif
+$f-header: 'ff-tisa-web-pro', 'Georgia', serif
 
