--- a/app/_sass/foundation/_utilities.sass
+++ b/app/_sass/foundation/_utilities.sass
@@ -236,7 +236,12 @@
   letter-spacing: 0.05em
   text-transform: uppercase
 
-.ttuw
+// ----- Small Caps ----- //
+
+.tsc
+  font-family: $f-header
+  font-size: 90%
+  font-style: normal
   letter-spacing: 0.2em
   text-transform: uppercase
 
