--- a/app/_layouts/post.html
+++ b/app/_layouts/post.html
@@ -7,12 +7,12 @@ post: true
     <div class="cell">
 
         <div class="grid">
-        <div class="grid-box grid-box--center grid-box--m--5of6 grid-box--l--3of4">
+            <div class="grid-box grid-box--center grid-box--m--5of6 grid-box--l--3of4">
                 <article class="post">
 
-                    <header class="post-header">
-                        <h1 class="post-title">{{page.title-display}}</h1>
-                        <time class="post-date" datetime="{{ page.date | date: '%Y-%m-%d'}}">{{ page.date | date: "%B %d, %Y" }}</time>
+                    <header class="mtl mbl tac">
+                        <h1>{{page.title-display}}</h1>
+                        <time class="label" datetime="{{ page.date | date: '%Y-%m-%d'}}">{{ page.date | date: "%B %d, %Y" }}</time>
                     </header>
 
                     {{content}}
