--- a/app/_sass/application.sass
+++ b/app/_sass/application.sass
@@ -44,7 +44,7 @@
 @import "structures/logo"
 @import "structures/nav"
 @import "structures/post"
-@import "structures/recentPosts"
+@import "structures/split"
 @import "structures/thumbnail"
 @import "structures/well"
 
