--- a/app/_sass/foundation/_base.sass
+++ b/app/_sass/foundation/_base.sass
@@ -65,6 +65,7 @@ a
   @extend .tch
   @extend .twb
   text-decoration: none
+  transition: $b-transition
   &:hover,
   &:focus
     color: mix($c-highlight, $c-base)
