imageFigure, quotation, kbd, rwd whitespace

--- a/app/_sass/application.sass
+++ b/app/_sass/application.sass
@@ -41,9 +41,11 @@
 @import "structures/highlight"
 @import "structures/highlight-colors"
 @import "structures/icon"
+@import "structures/imageFigure"
 @import "structures/logo"
 @import "structures/nav"
 @import "structures/post"
+@import "structures/quotation"
 @import "structures/split"
 @import "structures/thumbnail"
 @import "structures/well"
