--- a/app/_sass/structures/_post.sass
+++ b/app/_sass/structures/_post.sass
@@ -8,7 +8,9 @@
 
 .post
   h2
-    @extend .mtxl
+    @extend .mtm
+    +respond-to($bp-fontSize)
+      margin-top: $b-whitespace-l
   img
     @extend .db
     @extend .mhc
