--- a/app/_sass/foundation/_base.sass
+++ b/app/_sass/foundation/_base.sass
@@ -22,7 +22,7 @@ body
 //   Block Content
 // -------------------------------------
 
-ul, p
+ol, ul, p
   @extend .mbm
   @extend .mtf
 
@@ -53,6 +53,7 @@ h3, .h3
   @extend .tsm
 
 // ----- Images ----- //
+
 img
   height: auto
   max-width: 100%
@@ -77,9 +78,21 @@ abbr
 b
   font-weight: inherit
 
+%code
+  background-color: #f4f4f4
+  padding-left: 2px
+  padding-right: 2px
+  font-size: 80%
+
 code
   &:not([class])
-    background-color: #f4f4f4
-    padding-left: 2px
-    padding-right: 2px
-    font-size: 80%
+    @extend %code
+
+kbd
+  @extend %code
+  > kbd
+    font-size: inherit
+    &:first-of-type
+      padding-left: 0
+    &:last-of-type
+      padding-right: 0
