monospace fonts, xl whitespace

--- a/app/_sass/foundation/_base.sass
+++ b/app/_sass/foundation/_base.sass
@@ -82,9 +82,11 @@ b
   background-color: #f4f4f4
   padding-left: 2px
   padding-right: 2px
+  font-family: $f-monospace
   font-size: 80%
 
 code
+  font-family: $f-monospace
   &:not([class])
     @extend %code
 
