--- a/app/_sass/foundation/_settings.sass
+++ b/app/_sass/foundation/_settings.sass
@@ -43,13 +43,12 @@ $b-whitespace: 1.25rem // 20px
 $b-whitespace-xs: $b-whitespace * 0.5
 $b-whitespace-s: $b-whitespace * 0.5
 $b-whitespace-l: $b-whitespace * 2
-$b-whitespace-xl: $b-whitespace * 3
+$b-whitespace-xl: $b-whitespace * 4
 
 // ----- Base ----- //
 
 $bp-grid-m: 600px
 $bp-grid-l: 900px
-$bp-layout: 600px
 $bp-fontSize: 700px
 $bp-sidenotes: $bp-grid-l + 200px
 
@@ -67,5 +66,6 @@ $c-primary: #975997
 // ----- Fonts ----- //
 
 $f-base: 'source-sans-pro', 'Open Sans', 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif
+$f-monospace: menlo, monaco, "andale mono", courier, "lucida console", monospace
 $f-header: 'ff-tisa-web-pro', 'Georgia', serif
 
