Grunt concat, global application.js

--- a/app/_layouts/default.html
+++ b/app/_layouts/default.html
@@ -104,9 +104,7 @@ Now have fun looking around. :)
 	<script src="/js/dribbble.js" async></script>
 	{% endif %}
 
-	{% if page.post %}
-	<script src="/js/sidenotes.js"></script>
-	{% endif %}
+	<script src="/js/application.js"></script>
 
 	<script>
 		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
