--- a/app/_sass/application.sass
+++ b/app/_sass/application.sass
@@ -47,6 +47,7 @@
 @import "structures/post"
 @import "structures/quotation"
 @import "structures/split"
+@import "structures/tabBlock"
 @import "structures/thumbnail"
 @import "structures/well"
 
