well/highlight separation

--- a/app/_sass/foundation/_base.sass
+++ b/app/_sass/foundation/_base.sass
@@ -30,8 +30,6 @@ li
   @extend .mbs
   @extend .mtf
 
-// ----- Headers ----- //
-
 h1, .h1,
 h2, .h2,
 h3, .h3,
@@ -52,11 +50,12 @@ h2, .h2
 h3, .h3
   @extend .tsm
 
-// ----- Images ----- //
-
 img
   height: auto
   max-width: 100%
+
+pre
+  margin: 0
 
 // -------------------------------------
 //   Inline Content
