--- a/app/_layouts/default.html
+++ b/app/_layouts/default.html
@@ -25,7 +25,7 @@ Now have fun looking around. :)
 	<link rel="author" href="https://plus.google.com/u/0/113914298266231922059/posts">
 	<link rel="alternate" type="application/rss+xml"  href="http://www.johndjameson.com/feed.xml" title="John D. Jameson">
 
-	<link rel="stylesheet" href="/css/application.css?v5.1.2">
+	<link rel="stylesheet" href="/css/application.css?v5.1.3">
 	<script type="text/javascript" src="//use.typekit.net/gqu6ggi.js"></script>
 	<script type="text/javascript">try{Typekit.load();}catch(e){}</script>
 </head>
@@ -101,10 +101,10 @@ Now have fun looking around. :)
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 
 	{% if page.dribbble %}
-	<script src="/js/dribbble.js" async></script>
+	<script src="/js/dribbble.js?v5.1.3" async></script>
 	{% endif %}
 
-	<script src="/js/application.js"></script>
+	<script src="/js/application.js?v5.1.3"></script>
 
 	<script>
 		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
